// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render H1 tag 1`] = `
<h1
  className="root"
  id="heading"
>
  <div
    className="heading isPrimary"
  >
    Heading
  </div>
  <div
    className="toolbar"
  />
</h1>
`;

exports[`renderer should render H2 tag 1`] = `
<h2
  className="root"
  id="heading"
>
  <div
    className="heading"
  >
    Heading
  </div>
  <div
    className="toolbar"
  />
</h2>
`;

exports[`renderer should render heading with deprecated styles 1`] = `
<h2
  className="root"
  id="heading"
>
  <div
    className="heading isDeprecated"
  >
    Heading
  </div>
  <div
    className="toolbar"
  />
</h2>
`;

exports[`should pass props to slots 1`] = `
<SectionHeadingRenderer
  classes={
    Object {
      "heading": "heading-0-1",
      "isDeprecated": "isDeprecated-0-3",
      "isPrimary": "isPrimary-0-2",
      "root": "root-0-0",
      "toolbar": "toolbar-0-4",
    }
  }
  id="heading"
  slotName="slot"
  slotProps={
    Object {
      "bar": "baz",
      "foo": 1,
    }
  }
>
  Heading
</SectionHeadingRenderer>
`;
